# SurrogateNN_DSGE

./: .gitignore  README.md  pyproject.toml
benchmarks/: export_reference_steady_states.jl  nn_surrogate_validation_profile.toml  profile_validation.py  profile_validation_julia.jl  profile_validation_python.py  sw07_long_profile.toml
docs/: benchmark_report_2026-03-19.md  benchmark_report_2026-03-20.md  benchmark_report_2026-04-17.md  benchmark_report_2026-07-12.md  methodology_review_2026-03-23.md  porting_progress.md  sw07_long_profile.md
notebooks/: colab_jax_numpyro_gemini_profile.ipynb  colab_sw07_long_profile.ipynb
tests/: test_benchmark_profiles.py  test_determinacy.py  test_dsge_first_order.py  test_dsge_second_order.py  test_dsge_third_order.py  test_inference_numpyro.py  test_inversion_filter.py  test_lyapunov.py  test_model_compile_smoke.py  test_model_for_loops.py  test_model_gate_stats.py  test_model_helper_functions.py  test_model_indexed_syntax.py  test_model_lazy_compilation.py  test_model_loglikelihood.py  test_model_newton_solver.py  test_model_obc.py  test_model_options.py  test_model_parser.py  test_model_runtime.py  test_model_sep.py  test_model_source_compatibility.py  test_model_statespace.py  test_model_syntax_compatibility.py  test_notebooks.py  test_parameter_block_guess.py  test_parameter_bounds.py  test_parameter_calibration.py  test_parameter_conditionals.py  test_parameter_family_broadcast.py  test_posterior_chain_helpers.py  test_regime_switching_likelihood_api.py  test_sep.py  test_special_functions_parser.py  test_statespace.py  (+5 more)
(+40 files in other folders)
