[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "surrogatenn-dsge"
version = "0.1.0"
description = "A gradual Python/JAX port of MacroModelling-style DSGE tooling."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Matyas Farkas"},
]
dependencies = [
  "jax>=0.4.30",
  "scipy>=1.10,<2",
  "sympy>=1.13,<2",
]

[project.optional-dependencies]
inference = [
  "numpyro>=0.19,<0.20",
]
dev = [
  "numpyro>=0.19,<0.20",
  "pytest>=8.0,<9",
]
cuda12 = [
  "jax[cuda12]>=0.6",
]
cuda13 = [
  "jax[cuda13]>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/surrogatenn_dsge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
